src/objects/vlocity_ins__EntityFilterConditionArgument__c.object
<CustomObject>
    <description>Parameter of a Vlocity Entity Filter. Master-detail child object of Vlocity Entity Filter Condition.</description>
    <fields>
        <fullName>vlocity_ins__ArgumentSequence__c</fullName>
        <formula>vlocity_ins__FunctionArgumentId__r.vlocity_ins__Sequence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Argument Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContextDimensionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Context Dimension</label>
        <referenceTo>vlocity_ins__ContextDimension__c</referenceTo>
        <relationshipLabel>Where Used (Entity Filter Condition Arguments)</relationshipLabel>
        <relationshipName>EntityFilterConditionArguments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DomainType__c</fullName>
        <label>Domain Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Object Lookup</fullName>
                </value>
                <value>
                    <fullName>Type in</fullName>
                </value>
                <value>
                    <fullName>Context Dimension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__FilterConditionId__c</fullName>
        <label>Vlocity Entity Filter Condition</label>
        <referenceTo>vlocity_ins__EntityFilterCondition__c</referenceTo>
        <relationshipLabel>Where Used (Entity Filter Condition Arguments)</relationshipLabel>
        <relationshipName>EntityFilterConditionArguments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FunctionArgumentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Function Argument</label>
        <referenceTo>vlocity_ins__VlocityFunctionArgument__c</referenceTo>
        <relationshipLabel>Where Used (Entity Filter Condition Arguments)</relationshipLabel>
        <relationshipName>EntityFilterConditionArguments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectId__c</fullName>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PicklistValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Picklist Value</label>
        <referenceTo>vlocity_ins__PicklistValue__c</referenceTo>
        <relationshipLabel>Where Used (Entity Filter Condition Arguments)</relationshipLabel>
        <relationshipName>EntityFilterConditionArguments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <label>Type In Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Entity Filter Condition Argument</label>
    <nameField>
        <label>Argument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Entity Filter Condition Args</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>